--- a/Pages/ManageDamaged.cshtml
+++ b/Pages/ManageDamaged.cshtml
@@ -189,6 +189,14 @@ document.addEventListener("DOMContentLoaded", function () {
             <h2 class="h4">@Model.lblDamagedItems</h2>
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
+        <div class="btn-toolbar mb-2 mb-md-0">
+
+            <div class="btn-group ms-2 ms-lg-3">
+                <a href="DamageItem" class="btn btn-sm d-flex btn-gray-800 justify-content-center top-big-btn d-inline-flex align-items-center">
+                    <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">    Return Item Request
+                </a>
+            </div>
+        </div>
 
     </div>
 
@@ -220,8 +228,7 @@ document.addEventListener("DOMContentLoaded", function () {
                     </div>
 
                     <!-- Right: Unique Values -->
-                    <div class="p-2" id="filterValues"
-                    style="width: 60%; overflow-y: auto; border-left: 1px solid #eee;">
+                    <div class="p-2" id="filterValues" style="width: 60%; overflow-y: auto; border-left: 1px solid #eee;">
                         <div class="text-muted">Select a filter from left</div>
                     </div>
                 </div>
